symmetrical-broccoli-routetable-ap-southeast-1
{
    "RouteTable": {
        "Associations": [], 
        "RouteTableId": "rtb-e0adbd84", 
        "VpcId": "vpc-e7400783", 
        "PropagatingVgws": [], 
        "Tags": [], 
        "Routes": [
            {
                "GatewayId": "local", 
                "DestinationCidrBlock": "10.10.10.0/24", 
                "State": "active", 
                "Origin": "CreateRouteTable"
            }
        ]
    }
}
